--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "server/dist/server.js",
   "scripts": {
-    "start": "node server/dist/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"wait-on tcp:3001 && cd client && npm run dev\"",
+    "render-start": "concurrently \"cd server && npm run start\" \"wait-on tcp:3001 && cd client && npm run dev\"",
+    "server": "cd ./server && npm run start",
+    "server:build": "cd server && npm run build",
+    "server:dev": "cd server && npm run watch",
+    "client": "cd ./client && npm run start",
+    "client:build": "cd client && npm run build",
+    "client:dev": "cd client && npm run dev",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
+    "seed": "cd server && npm run seed",
+    "build": "cd ./server && npm run build && cd ../client && npm run build",
     "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "wait-on": "^7.2.0"
   }
-}
+  }
+
